--- a/package.json
+++ b/package.json
@@ -11,12 +11,22 @@
   "dependencies": {
     "@prisma/client": "^4.15.0",
     "autoprefixer": "10.4.14",
+    "bootstrap": "^5.3.0",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "html-pdf": "^3.0.1",
     "next": "13.4.2",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.13.0",
     "postcss": "8.4.23",
     "prisma": "^4.15.0",
+    "puppeteer": "^20.7.3",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.14.0",
+    "serve": "^14.2.0",
     "tailwindcss": "3.3.2"
   }
 }
